--- a/index.html
+++ b/index.html
@@ -539,11 +539,10 @@
 		</div>
 		<div class="grid_9 omega">
 			<div class="contact_form">  
-				<div id="note"></div>
 				<div id="fields">
 					<form id="ajax-contact-form" action="index.html">
 						<input type="text" name="name" value="" placeholder="Имя" />
-						<input type="text" name="subject" value="" placeholder="Телефон" />
+						<input type="text" name="phone" value="" placeholder="Телефон" />
 						<input type="text" name="email" value="" placeholder="Email" />
 						<textarea name="message" id="message" placeholder="Сообщение"></textarea>
 						<div class="clear"></div>
@@ -552,6 +551,7 @@
 						<div class="clear"></div>
 					</form>
 				</div>
+				<div id="note" style="font-size:30px;"></div>
 			</div>
 		</div>
 		<div class="clear"></div>
