--- a/index.html
+++ b/index.html
@@ -50,7 +50,35 @@
 
 		});		
 	</script> -->
-	
+	<!-- Yandex.Metrika counter -->
+	<script type="text/javascript">
+	    (function (d, w, c) {
+	        (w[c] = w[c] || []).push(function() {
+	            try {
+	                w.yaCounter39131440 = new Ya.Metrika({
+	                    id:39131440,
+	                    clickmap:true,
+	                    trackLinks:true,
+	                    accurateTrackBounce:true,
+	                    webvisor:true
+	                });
+	            } catch(e) { }
+	        });
+
+	        var n = d.getElementsByTagName("script")[0],
+	            s = d.createElement("script"),
+	            f = function () { n.parentNode.insertBefore(s, n); };
+	        s.type = "text/javascript";
+	        s.async = true;
+	        s.src = "https://mc.yandex.ru/metrika/watch.js";
+
+	        if (w.opera == "[object Opera]") {
+	            d.addEventListener("DOMContentLoaded", f, false);
+	        } else { f(); }
+	    })(document, window, "yandex_metrika_callbacks");
+	</script>
+	<noscript><div><img src="https://mc.yandex.ru/watch/39131440" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+	<!-- /Yandex.Metrika counter -->	
 	<script type="text/javascript">$($.date_input.initialize);</script>
 	
 </head>
@@ -527,10 +555,10 @@
 	<div class="container clearfix">
 		
 		<div class="grid_3 contact_det_block">
-			<p>Вы можете связатся с нами влюбым удобным для вас способом в любое время дня и ночи</p>
+			<p>Вы можете связатся с нами любым удобным для вас способом в любое время дня и ночи</p>
 			<ul class="foot_block_intouch">
-				<li class="touch_phone"><p><a href="tel:+79222535818">8(922)253-58-18</a></p></li>
-				<li class="touch_phone"><p><a href="tel:+79034541347">8(903)454-13-47</a></p></li>
+				<li class="touch_phone"><p><a href="tel:+79222535818" style="padding:0 0 0 0">8(922)253-58-18</a></p></li>
+				<li class="touch_phone"><p><a href="tel:+79034541347" style="padding:0 0 0 0">8(903)454-13-47</a></p></li>
 <!-- 				<li class="touch_clock"><p>Mon - Sat 9:00am - 6:00 pm</p></li> -->
 				<li class="touch_mail"><a href="mailto:lena.kovalevaem@mail.ru">lena.kovalevaem@mail.ru</a></li>
 				<!-- <li class="touch_site"><a href="javascript:void(0);">www.lorem.com</a></li> -->
@@ -570,7 +598,7 @@
 
 <div id="footer">
 	<div class="container clearfix">
-		<div class="copyright">Гостевой дом "Алёна" &copy; 2016 | <a href="www.h-aa.ru">Изготовление сайта: www.h-aa.ru</a> </div>
+		<div class="copyright">Гостевой дом "Алёна" &copy; 2016 | <a href="http://www.h-aa.ru">Изготовление сайта: www.h-aa.ru</a> </div>
 		<div id="back_top"><a class="button" title="" data-slide="1"></a></div>
 	</div>
 </div>
