--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
 						<td>1400</td>
 					</tr>
 					<tr>
-						<td>2-х местный с дополнительным местом</td>
+						<td>2-х местный с дополнительным местом и кондиционером</td>
 						<td>1400</td>
 						<td>1800</td>
 						<td>2200</td>
@@ -490,7 +490,7 @@
 						<td>1800</td>
 					</tr>
 					<tr>
-						<td>4-х местный (большая кравать и диван, 1 комната)</td>
+						<td>4-х местный (большая кравать и диван, кондиционер, 1 комната)</td>
 						<td>1600</td>
 						<td>2000</td>
 						<td>2600</td>
@@ -499,7 +499,7 @@
 						<td>2000</td>
 					</tr>
 					<tr>
-						<td>4-х местный (2 комнаты)</td>
+						<td>4-х местный (2 комнаты, кондиционер)</td>
 						<td>1800</td>
 						<td>2200</td>
 						<td>3000</td>
@@ -508,7 +508,7 @@
 						<td>2200</td>
 					</tr>
 					<tr>
-						<td>4-х местный ЛЮКС (с кухней и стиральной машиной)</td>
+						<td>4-х местный ЛЮКС (с кухней и стиральной машиной, кондиционером)</td>
 						<td>2200</td>
 						<td>2600</td>
 						<td>3400</td>
