--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 			<ul>
 			  <li>«СТАНДАРТ» - 2-х и 3-х местные однокомнатные номера со всеми удобствами – основа номерного фонда гостевого дома.</li>
 			  <li>«СТУДИЯ» - 4-х местный номер с собственной кухней (2 номера).</li>
-			  <li>«ЛЮКС» - просторный двухкомнатный номер вместимостью до 4-х человек (1 номер).</li>
+			  <!--<li>«ЛЮКС» - просторный двухкомнатный номер вместимостью до 4-х человек (1 номер).</li>-->
 			</ul>
 			 <b>Вне зависимости от категории, в каждом номере имеется: санузел (душ, туалет), сплит-система, телевизор, холодильник, WI-FI.</b>
 			</p>
@@ -508,7 +508,7 @@
 						<td>2200</td>
 					</tr>
 					<tr>
-						<td>4-х местный ЛЮКС (с кухней и стиральной машиной, кондиционером)</td>
+						<td>4-х местный (с кухней, стиральной машиной и кондиционером)</td>
 						<td>2200</td>
 						<td>2600</td>
 						<td>3400</td>
@@ -518,13 +518,13 @@
 					</tr>
 					<tr>
 						<td colspan="7">
-						При размещение более чем на 10 дней - скидка 10%
+						При размещение более чем на 10 дней - скидка 10%.
 						<br>
-						Проживание ребёнка без предоставление дополнительного места - 200 рублей в сутки
+						Проживание ребёнка без предоставление дополнительного места - 200 рублей в сутки.
 						<br>
-						Бронирование номера - 1000 рублей
+						Бронирование номера - 1000 рублей.
 						<br>
-						Цены ориентировачные. Уточняйте по телефону либо по email
+						Цены ориентировачные. Уточняйте по телефону либо по email.
 						</td>
 					</tr>					
 				<!-- </tbody> -->
