--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
 
 <div class="slide" id="slide21" data-slide="21" data-stellar-background-ratio="0.5">
 	<div class="container clearfix">
-		<div class="grid_12">
+		<div class="grid_12 table_small">
 			<table class="table_price">
 				<!-- <thead> -->
 				<caption>Стоимость проживания</caption>
