--- a/index.html
+++ b/index.html
@@ -459,6 +459,7 @@
 						<th>01.07-28.08</th>
 						<th>29.08-10.09</th>
 						<th>11.09-30.09</th>
+						<th>01.10-30.04 <br><small>цена от 7 дней</small></th>
 					</tr>
 <!-- 				</thead>
 				<tbody> -->
@@ -470,15 +471,17 @@
 						<td>1800</td>
 						<td>1000</td>
 						<td>800</td>
+						<td>400</td>
 					</tr>
 					<tr>
 						<td>2-х местный с кондиционером</td>
 						<td>1100</td>
 						<td>1400</td>
 						<td>1800</td>
-						<td>1400</td>
+						<td>2400</td>
 						<td>1400</td>
 						<td>1000</td>
+						<td>500</td>
 					</tr>
 					<tr>
 						<td>2-х местный с дополнительным местом и кондиционером</td>
@@ -488,6 +491,7 @@
 						<td>2800</td>
 						<td>1600</td>
 						<td>1200</td>
+						<td>600</td>
 					</tr>
 					<tr>
 						<td>4-х местный (большая кравать и диван, кондиционер, 1 комната)</td>
@@ -497,6 +501,7 @@
 						<td>3400</td>
 						<td>2000</td>
 						<td>1600</td>
+						<td>700</td>
 					</tr>
 					<tr>
 						<td>4-х местный (2 комнаты, кондиционер)</td>
@@ -506,6 +511,7 @@
 						<td>3800</td>
 						<td>2200</td>
 						<td>1800</td>
+						<td>800</td>
 					</tr>
 					<tr>
 						<td>4-х местный (с кухней, стиральной машиной и кондиционером)</td>
@@ -515,6 +521,7 @@
 						<td>4200</td>
 						<td>2800</td>
 						<td>2200</td>
+						<td>1000</td>
 					</tr>
 					<tr>
 						<td colspan="7">
@@ -523,6 +530,8 @@
 						Проживание ребёнка без предоставление дополнительного места - 200 рублей в сутки.
 						<br>
 						Бронирование номера - 1000 рублей.
+						<br>
+						При аренде в зимний период на длительный срок цену уточняйте о телефону либо по email.
 						<br>
 						Цены ориентировачные. Уточняйте по телефону либо по email.
 						</td>
