Изменения по ценам на 2017 год

--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
 <div class="slide" id="slide21" data-slide="21" data-stellar-background-ratio="0.5">
 	<div class="container clearfix">
 		<div class="grid_12 table_small">
-			<table class="table_price">
+			<table class="table_price"  border="1">
 				<!-- <thead> -->
 				<caption>Стоимость проживания</caption>
 					<tr>
@@ -456,84 +456,111 @@
 						<th>01.05-20.05</th>
 						<th>21.05-10.06</th>
 						<th>11.06-30.06</th>
-						<th>01.07-28.08</th>
-						<th>29.08-10.09</th>
-						<th>11.09-30.09</th>
-						<th>01.10-30.04 <br><small>цена от 7 дней</small></th>
+						<th>01.07-25.08</th>
+						<th>26.08-05.09</th>
+						<th>06.09-15.09</th>
+						<th>16.09-30.09</th>
+						<th>01.10-30.04</th>
 					</tr>
 <!-- 				</thead>
 				<tbody> -->
 					<tr>
-						<td>2-х местный с вентилятором</td>
+						<td>2-х местный, двухспальная кровать (на мансардном этаже), вентилятором</td>
 						<td>800</td>
 						<td>1000</td>
 						<td>1400</td>
-						<td>1800</td>
+						<td>2000</td>
+						<td>1400</td>
 						<td>1000</td>
-						<td>800</td>
+						<td>900</td>
 						<td>400</td>
 					</tr>
 					<tr>
-						<td>2-х местный с кондиционером</td>
-						<td>1100</td>
+						<td>2-х местный (1 и 2 этаж), 2-х местная кровать или две односпальных кровати, кондиционер</td>
+						<td>1000</td>
 						<td>1400</td>
 						<td>1800</td>
 						<td>2400</td>
+						<td>1800</td>
 						<td>1400</td>
-						<td>1000</td>
+						<td>1200</td>
 						<td>500</td>
 					</tr>
 					<tr>
-						<td>2-х местный с дополнительным местом и кондиционером</td>
-						<td>1400</td>
+						<td>3-х местный (1 и 2 этаж), три односпальных места или 2-х спальная кровать и диван, кондиционер</td>
+						<td>1300</td>
 						<td>1800</td>
 						<td>2200</td>
 						<td>2800</td>
+						<td>2200</td>
+						<td>1800</td>
 						<td>1600</td>
-						<td>1200</td>
 						<td>600</td>
 					</tr>
 					<tr>
-						<td>4-х местный (большая кравать и диван, кондиционер, 1 комната)</td>
-						<td>1600</td>
+						<td>4-х местный, 2-х спальная кровать и 2-х спальный диван (на мансардном этаже), кондиционер</td>
+						<td>1500</td>
 						<td>2000</td>
-						<td>2600</td>
-						<td>3400</td>
+						<td>2500</td>
+						<td>3300</td>
+						<td>2500</td>
 						<td>2000</td>
-						<td>1600</td>
+						<td>1800</td>
 						<td>700</td>
 					</tr>
 					<tr>
-						<td>4-х местный (2 комнаты, кондиционер)</td>
+						<td>2-х комнатный номер, в одной комнате 2-х спальная кровать, в другой 2 односпальные кровати (на 2-м этаже), кондиционер</td>
 						<td>1800</td>
-						<td>2200</td>
-						<td>3000</td>
-						<td>3800</td>
-						<td>2200</td>
-						<td>1800</td>
+						<td>2300</td>
+						<td>2800</td>
+						<td>3600</td>
+						<td>2800</td>
+						<td>2300</td>
+						<td>2000</td>
 						<td>800</td>
 					</tr>
 					<tr>
-						<td>4-х местный (с кухней, стиральной машиной и кондиционером)</td>
-						<td>2200</td>
+						<td>4-х местный, 2-х спальная кровать и 2-х спальный диван (на мансардном этаже), кухня, стиральная машина, кондиционер</td>
+						<td>2000</td>
 						<td>2600</td>
 						<td>3400</td>
 						<td>4200</td>
-						<td>2800</td>
-						<td>2200</td>
+						<td>3400</td>
+						<td>2600</td>
+						<td>2300</td>
 						<td>1000</td>
 					</tr>
 					<tr>
-						<td colspan="7">
-						При размещение более чем на 10 дней - скидка 10%.
-						<br>
-						Проживание ребёнка без предоставление дополнительного места - 200 рублей в сутки.
+						<td>Дополнительное место (детская кроватка) в любой номер</td>
+						<td>120</td>
+						<td>120</td>
+						<td>150</td>
+						<td>200</td>
+						<td>150</td>
+						<td>120</td>
+						<td>120</td>
+						<td>120</td>
+					</tr>
+					<tr>
+						<td>дополнительное место (раскладушка с ортопедическим основанием) в любой номер</td>
+						<td>150</td>
+						<td>150</td>
+						<td>200</td>
+						<td>250</td>
+						<td>200</td>
+						<td>150</td>
+						<td>150</td>
+						<td>150</td>
+					</tr>										
+					<tr>
+						<td colspan="9">
+						Проживание детей, без предоставления дополнительного места, до 2-х лет бесплатно, с 2-х лет - 100 рублей в сутки
 						<br>
 						Бронирование номера - 1000 рублей.
 						<br>
-						При аренде в зимний период на длительный срок цену уточняйте о телефону либо по email.
+						При аренде в зимний период на длительный срок цену уточняйте о телефону либо по <a href="mailto:otel-alena@yandex.ru">email</a>.
 						<br>
-						Цены ориентировачные. Уточняйте по телефону либо по email.
+						Цены ориентировачные. Уточняйте по телефону либо по <a href="mailto:otel-alena@yandex.ru">email</a>.
 						</td>
 					</tr>					
 				<!-- </tbody> -->
