Изменения по желанию Заказчика

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 			<p>Гостевой дом «АЛЁНА»находится на живописном черноморском побережье ближайшего пригорода Анапы – в курортном районе Джемете, на второй линии от Пионерского проспекта. Песчаный пляж в 15 минутах</span> ходьбы. В этих местах множество детских здравниц, здесь самые удобные, безопасные и хорошо оснащенные пляжи. Вся туристическая инфраструктура достаточно развита и подчинена веселому и здоровому семейному отдыху. По дороге на песчаный пляж находятся: продуктовые магазины, летние кафе и рестораны, экскурсионные киоски, продаются фрукты, овощи, пляжный инвентарь и многое другое. На маршрутном такси можно проехать к аквапарку, дельфинарию, набережной и в центр города Анапа.</p>
 			<hr>
 			<h4>Территория</h4>
-			<p>Благоустроенная территория располагает с спокойному отдыху. Внутренний двор вымощен тротуарной плиткой и устелен искусственным изумрудным газоном. К вашим услугам большой открытый бассейн! С большим удовольствием каждый из вас окунется в чистую прохладу в жаркий полдень. Около бассейна имеются шезлонги для принятия солнечных ванн и зонты.</p>
+			<p>Благоустроенная территория располагает с спокойному отдыху. Внутренний двор вымощен тротуарной плиткой и устелен искусственным изумрудным газоном. К вашим услугам большой открытый бассейн! С большим удовольствием каждый из вас окунется в чистую прохладу в жаркий полдень. Около бассейна имеются шезлонги для принятия солнечных ванн и зонты, детская площадка.</p>
 			<hr>
 			<h4>Номерной фонд</h4>
 			<ul>
@@ -249,7 +249,7 @@
 			<a class="serv_block" href="javascript:void(0);" alt="">
 				<div class="icon_block1"></div>
 				<p>Бесплатный трансфер</p>
-				Бесплатный трансфер до жд и аэропорта
+				Бесплатный трансфер до жд и аэропорта Анапа
 			</a>
 		</div>
 		<div class="grid_4 omega">
@@ -466,19 +466,19 @@
 				<tbody> -->
 					<tr>
 						<td>2-х местный, двухспальная кровать (на мансардном этаже), вентилятором</td>
-						<td>800</td>
+						<td>500</td>
 						<td>1000</td>
-						<td>1400</td>
+						<td>1600</td>
 						<td>2000</td>
-						<td>1400</td>
+						<td>1600</td>
 						<td>1000</td>
-						<td>900</td>
+						<td>800</td>
 						<td>400</td>
 					</tr>
 					<tr>
 						<td>2-х местный (1 и 2 этаж), 2-х местная кровать или две односпальных кровати, кондиционер</td>
-						<td>1000</td>
-						<td>1400</td>
+						<td>700</td>
+						<td>1200</td>
 						<td>1800</td>
 						<td>2400</td>
 						<td>1800</td>
@@ -488,21 +488,21 @@
 					</tr>
 					<tr>
 						<td>3-х местный (1 и 2 этаж), три односпальных места или 2-х спальная кровать и диван, кондиционер</td>
-						<td>1300</td>
-						<td>1800</td>
+						<td>800</td>
+						<td>1600</td>
 						<td>2200</td>
 						<td>2800</td>
 						<td>2200</td>
-						<td>1800</td>
 						<td>1600</td>
+						<td>1400</td>
 						<td>600</td>
 					</tr>
 					<tr>
 						<td>4-х местный, 2-х спальная кровать и 2-х спальный диван (на мансардном этаже), кондиционер</td>
-						<td>1500</td>
-						<td>2000</td>
+						<td>1000</td>
+						<td>1800</td>
 						<td>2500</td>
-						<td>3300</td>
+						<td>3400</td>
 						<td>2500</td>
 						<td>2000</td>
 						<td>1800</td>
@@ -510,21 +510,21 @@
 					</tr>
 					<tr>
 						<td>2-х комнатный номер, в одной комнате 2-х спальная кровать, в другой 2 односпальные кровати (на 2-м этаже), кондиционер</td>
-						<td>1800</td>
-						<td>2300</td>
-						<td>2800</td>
-						<td>3600</td>
-						<td>2800</td>
-						<td>2300</td>
+						<td>1200</td>
+						<td>2000</td>
+						<td>3000</td>
+						<td>3800</td>
+						<td>3200</td>
+						<td>2400</td>
 						<td>2000</td>
 						<td>800</td>
 					</tr>
 					<tr>
 						<td>4-х местный, 2-х спальная кровать и 2-х спальный диван (на мансардном этаже), кухня, стиральная машина, кондиционер</td>
-						<td>2000</td>
-						<td>2600</td>
+						<td>1500</td>
+						<td>2300</td>
 						<td>3400</td>
-						<td>4200</td>
+						<td>4000</td>
 						<td>3400</td>
 						<td>2600</td>
 						<td>2300</td>
@@ -532,32 +532,36 @@
 					</tr>
 					<tr>
 						<td>Дополнительное место (детская кроватка) в любой номер</td>
-						<td>120</td>
-						<td>120</td>
+						<td>150</td>
+						<td>150</td>
 						<td>150</td>
 						<td>200</td>
 						<td>150</td>
-						<td>120</td>
-						<td>120</td>
-						<td>120</td>
+						<td>150</td>
+						<td>150</td>
+						<td>50</td>
 					</tr>
 					<tr>
 						<td>дополнительное место (раскладушка с ортопедическим основанием) в любой номер</td>
-						<td>150</td>
-						<td>150</td>
+						<td>200</td>
+						<td>200</td>
 						<td>200</td>
 						<td>250</td>
 						<td>200</td>
-						<td>150</td>
-						<td>150</td>
-						<td>150</td>
+						<td>200</td>
+						<td>200</td>
+						<td>100</td>
 					</tr>										
 					<tr>
 						<td colspan="9">
-						Проживание детей, без предоставления дополнительного места, до 2-х лет бесплатно, с 2-х лет - 100 рублей в сутки
+						Проживание детей, без предоставления дополнительного места, до 3-х лет бесплатно, с 3-х лет - 100 рублей в сутки
 						<br>
-						Бронирование номера - 1000 рублей.
+						Бронирование номера - цена номера по прайсу за сутки проживания.
 						<br>
+						Расчётный час: выезд из номера до 12:00, заселение после 14:00
+						<br>
+						После освобождения номера можно находится на территории гостевого дома до времени отъезда
+						<br>						
 						При аренде в зимний период на длительный срок цену уточняйте о телефону либо по <a href="mailto:otel-alena@yandex.ru">email</a>.
 						<br>
 						Цены ориентировачные. Уточняйте по телефону либо по <a href="mailto:otel-alena@yandex.ru">email</a>.
