--- a/index.html
+++ b/index.html
@@ -262,8 +262,8 @@
 		<div class="grid_4">
 			<a class="serv_block" href="javascript:void(0);" alt="">
 				<div class="icon_block1"></div>
-				<p>Бассейн</p>
-				На территории гостевого дома имеется большой бассейн
+				<p>Бассейн с подогревом</p>
+				На территории гостевого дома имеется большой бассейн с подогревом
 			</a>
 		</div>
 		<div class="grid_4 omega">
