--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 					<h1>Гостевой дом "Алёна"</h1>
 					<h2>Здесь есть все то, что вы искали для проведения <br> отпуска и каникул на море!</h2>
 					<br>
-					<h2><a href="tel:+79222535818">8(922)253-58-18</a><br><a href="tel:+79034541347">8(903)454-13-47</a></h2>
+					<h2><a href="tel:+79890848600">8(989)084-86-00</a><br><a href="tel:+79890848700">8(989)084-87-00</a></h2>
 				</div>
 				<!-- <a class="button" title="" data-slide="8">Book Now</a> -->
 			</div>
@@ -598,10 +598,10 @@
 		<div class="grid_3 contact_det_block">
 			<p>Вы можете связатся с нами любым удобным для вас способом в любое время дня и ночи</p>
 			<ul class="foot_block_intouch">
-				<li class="touch_phone"><p><a href="tel:+79222535818" style="padding:0 0 0 0">8(922)253-58-18</a></p></li>
-				<li class="touch_phone"><p><a href="tel:+79034541347" style="padding:0 0 0 0">8(903)454-13-47</a></p></li>
+				<li class="touch_phone"><p><a href="tel:+79890848600" style="padding:0 0 0 0">8(989)084-86-00</a></p></li>
+				<li class="touch_phone"><p><a href="tel:+79890848700" style="padding:0 0 0 0">8(989)084-87-00</a></p></li>
 <!-- 				<li class="touch_clock"><p>Mon - Sat 9:00am - 6:00 pm</p></li> -->
-				<li class="touch_mail"><a href="mailto:lena.kovalevaem@mail.ru">lena.kovalevaem@mail.ru</a></li>
+				<li class="touch_mail"><a href="mailto:gostevoi_dom_anapa@mail.ru">gostevoi_dom_anapa@mail.ru</a></li>
 				<!-- <li class="touch_site"><a href="javascript:void(0);">www.lorem.com</a></li> -->
 				<li class="touch_adress"><p>Анапа, ул.Верхняя дорога 83б</p></li>
 			</ul>
