--- a/index.html
+++ b/index.html
@@ -562,9 +562,9 @@
 						<br>
 						После освобождения номера можно находится на территории гостевого дома до времени отъезда
 						<br>						
-						При аренде в зимний период на длительный срок цену уточняйте о телефону либо по <a href="mailto:otel-alena@yandex.ru">email</a>.
+						При аренде в зимний период на длительный срок цену уточняйте о телефону либо по <a href="mailto:gostevoi_dom_anapa@mail.ru">email</a>.
 						<br>
-						Цены ориентировачные. Уточняйте по телефону либо по <a href="mailto:otel-alena@yandex.ru">email</a>.
+						Цены ориентировачные. Уточняйте по телефону либо по <a href="gostevoi_dom_anapa@mail.ru">email</a>.
 						</td>
 					</tr>					
 				<!-- </tbody> -->
