--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
 						<br>						
 						При аренде в зимний период на длительный срок цену уточняйте о телефону либо по <a href="mailto:gostevoi_dom_anapa@mail.ru">email</a>.
 						<br>
-						Цены ориентировачные. Уточняйте по телефону либо по <a href="gostevoi_dom_anapa@mail.ru">email</a>.
+						Цены ориентировачные. Уточняйте по телефону либо по <a href="mailto:gostevoi_dom_anapa@mail.ru">email</a>.
 						</td>
 					</tr>					
 				<!-- </tbody> -->
